--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+v1.1.3, Nov. 7, 2014
+  - Added `cider tap missing` command.
+  - Allow adding multiple items at once using `addlink`.
+
 v1.1.2, Nov. 4, 2014
   - Fixed bug where Homebrew's debug output wasn't getting ignored in
     `brew missing`.
@@ -7,11 +11,11 @@ v1.1.2, Nov. 4, 2014
     XDG basedir spec.
   - Cider's support directory is now located in ~/Library/Application Support
     by default instead of ~/.cider/.cache.
-  - Added the addlink & unlink commands.
+  - Added the `addlink` & `unlink` commands.
 
 v1.1.1, Oct. 29, 2014
   - Added support for Python 3.
-  - Fixed bug where `cider missing` would sometimes fail to add items i
+  - Fixed bug where `cider missing` would sometimes fail to add items
     to bootstrap.
   - Fixed bug where bootstrap would get overwritten if no changes were made.
 
