--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+v1.1.7, Oct. 18, 2015
+  - Fixed installation issue with click dependency.
+
 v1.1.6, Feb. 5, 2015
   - Added YAML support for bootstrap and defaults files.
   - Fixed issue with setting icons for local paths.
