--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+v1.1.8, March 21, 2016.
+  - Fixed compatibility with brew cask.
+  - Fixed compatibility with brew pip.
+  - Fixed bug with flushing terminal prompt.
+
 v1.1.7, Oct. 18, 2015
   - Fixed installation issue with click dependency.
 
