--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+v1.1.12, July 7, 2019.
+  - Fixed behavior when removing symlinks.
+  - Fixed deprecation warning when loading yaml files.
+  - Updated click dependency to latest version.
+
 v1.1.11, May 6, 2017.
   - Fixed issue with warnings shown on latest Click with Python 2.
   - Fixed Python 3 compatibility in apply defaults command.
